Added text in html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-  <div class="grid">
-  </div>
+  <div class="grid"></div>
+  This is pacman
   </body>
 </html>
