--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="utf-8">
     <title>Pacman</title>
     <script type="text/javascript" src="scripts/app.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Damion|Kanit:700i,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <div class="grid"></div>
+    <header>
+      <p>new for 1985</p>
+      <h1>Pacman</h1>
+      <h2>At General Assembly</h2>
+    </header>
+    <main>
+      <div class="grid"></div>
+    </main>
   </body>
 </html>
