--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <h2>At General Assembly</h2>
     </header>
     <main>
-      <div class="grid"></div>
+      <article class="grid"></article>
+      <article class="scoreboard">
+        <div class="score"></div>
+        <div class="lives"></div>
+        <div class="collected"></div>
+      </article>
     </main>
   </body>
 </html>
