Game now has lives, and can be won

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <h2>At General Assembly</h2>
     </header>
     <main>
-      <article class="grid"></article>
+      <article class="grid">
+        <div class="message-overlay"></div>
+      </article>
       <article class="scoreboard">
         <div class="score"></div>
         <div class="lives"></div>
