Added new level and synced the ghost and pacman clocks

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   </head>
   <body>
     <header>
+      <div class="pacman-title"></div>
       <p>new for 1985</p>
       <h1>Pacman</h1>
-      <h2>At General Assembly</h2>
+      <h2>General Assembly Edition</h2>
     </header>
     <main>
-      <article class="grid">
-        <div class="message-overlay"></div>
-      </article>
       <article class="scoreboard">
         <div class="score"></div>
-        <div class="lives"></div>
         <div class="collected"></div>
+        <div class="lives"></div>
+      </article>
+      <article class="grid">
       </article>
     </main>
   </body>
