--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
       </article>
       <article class="grid">
       </article>
+      <article class="d-pad">
+        <div class="d-pad-row">
+          <div class="up"></div>
+        </div>
+        <div class="d-pad-row">
+          <div class="left"></div>
+          <div class="centre"></div>
+          <div class="right"></div>
+        </div>
+        <div class="d-pad-row">
+          <div class="down"></div>
+        </div>
+      </article>
     </main>
   </body>
 </html>
