--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,22 @@
       gtag('config', 'UA-145390928-2');
     </script>
     <meta charset="utf-8">
-    <title>Pacman</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <meta name="description" content="Pacman, an arcade classic built by Tom Tidswell">
+    <meta name="keywords" content="Pacmen,Javascript,Node,Node.js,HTML,CSS">
+    <meta name="author" content="Tom Tidswell">
+    
+    <meta property="og:title" content="Pacman, an arcade classic built by Tom Tidswell" />
+    <meta property="og:image" content="https://www.tomtidswell.co.uk/img/pacman.jpg" />
+    <meta property="og:description" content="Portfolio: Tom Tidswell, a London based full stack software engineer" />
+    <meta property="og:url" content="https://sei-pacman.herokuapp.com" />
+    <meta property="og:type" content="profile" />
+    <meta property="profile:first_name" content="Tom">
+    <meta property="profile:last_name" content="Tidswell">
+
+    <title>Pacman</title>
+
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Damion|Kanit:700i,900&display=swap" rel="stylesheet">
   </head>
